--- a/examples/sandbox/index.html
+++ b/examples/sandbox/index.html
@@ -82,6 +82,7 @@
     <button id='trezor'>Pair Trezor</button>
     <button id='ledger'>Pair Ledger</button>
     <button id='portis'>Pair Portis</button>
+    <button id='metamask'>Pair MetaMask</button>
 
     <select id='keyring' style="height: 100px" size="4"></select>
   </div>
